# CMakeTutorial

./: CMakeLists.txt  README.md  database.db
inc/: database.h  system.h
src/: database.c  main.c  system.c
